--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     crossorigin="anonymous"></script>
     
   <section id="about">
-    <h1 class="animate__animated animate__fadeIn intro-text">Bruh.</h1>
+    <h1 class="animate__animated animate__fadeIn intro-text">jaake padhai kar.</h1>
   </section>
   <section id="projects">
 
